Update ShaniDashboardPlugin and ShaniDashboardReliabilityRunPlugin